<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home" />
    
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/notifications" />
    
    <item
        android:id="@+id/navigation_ask"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/ask" />
    
    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/leaderboard" />
    
    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
